# agentic-nids

./: .bazelrc  .gitignore  ARCHITECTURE.md  BUILD  CMakeLists.txt  DEPLOYMENT_GUIDE.md  Dockerfile  IMPLEMENTATION.md  Makefile  Makefile.build  PROJECT_SUMMARY.md  QUICK_START.md  README.md  WORKSPACE  docker-compose.yml
.claude/: settings.local.json
.devcontainer/: devcontainer.json  vcpkg.json
.github/workflows/: cd.yml  ci.yml
agent/: NDPI_INTEGRATION.md  README.md  agent_card.json  classifier_agent.py  classifier_agent_a2a.py  classifier_vertex_agent.py  collector.py  docker-compose.yaml  docker-compose.yml  main.py  models.py  ndpi_collector_agent.py  nfstream_collector_agent.py  nids-collector.service  pyproject.toml  schema.sql  start_test.sh
agent/agents/: deep_search_agent.py  nids_graph.py
agent/agents/llm/: __init__.py  llm_explanation_agent.py  strategies.py
agent/agents/storage/: clickhouse_store.py
agent/agents/tools/: flow_search_tools.py
agent/config/: config.yaml  ndpi_agent.yaml  ndpi_agent_live.yaml  ndpi_agent_pcap.yaml  nfstream_agent.yaml  nfstream_agent_live.yaml  nfstream_agent_pcap.yaml
agent/proto/: agent2agent.proto
agent/ui/: index.html  package.json
agent/ui/src/: App.vue
agent/ui/src/assets/: base.css  main.css
agent/ui/src/components/: ThreatCard.vue
agent/ui/src/router/: index.js
agent/ui/src/services/: demoData.js
agent/ui/src/views/: ThreatDashboard.vue
data/: download_attack_pcaps.sh
docs/: docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  sidebars.js
docs/.claude/: settings.local.json
docs/blog/: 2025-01-01-getting-started-with-ndpi.md
docs/docs/: api-reference.md  basic-integration.md  building.md  examples.md  flows.md  intro.md  netflow-export.md  risks.md  xgboost-integration.md
docs/docs/agents/: _category_.json  deep-search.md  llm-explanation.md  nfstream-collector.md
docs/docs/api/: agents.md
docs/docs/architecture/: conversational-ai.md  data-models.md  overview.md  workflow.md
docs/docs/deployment/: docker.md  kubernetes.md  monitoring.md
docs/docs/getting-started/: quick-start.md
docs/docs/guides/: configuration.md  performance.md  security.md
docs/docs/storage/: _category_.json  clickhouse.md
docs/src/components/HomepageFeatures/: index.tsx
honeypot/: QUICK_START.md  README.md  deploy-k8s.sh  docker-compose.yml  start.sh
honeypot/attacker/: Dockerfile  entrypoint.sh
honeypot/k8s/: attacker.yaml  configmaps.yaml  grafana.yaml  kustomization.yaml  loki.yaml  namespace.yaml  promtail.yaml  pvcs.yaml  rbac-promtail.yaml  victim1.yaml  victim2.yaml  victim3.yaml
honeypot/victim1/: Dockerfile  entrypoint.sh
honeypot/victim1/web/: index.php
honeypot/victim2/: Dockerfile  entrypoint.sh  nginx-default.conf  pghoney-config.json  vsftpd.conf
honeypot/victim2/web/: index.php
honeypot/victim3/: Dockerfile  entrypoint.sh
honeypot/victim3/web/: index.php
include/: flow_agent.h.bak
infra/docker/: Dockerfile.all-in-one  Dockerfile.classifier  Dockerfile.collector
infra/helm/agentic-nids/: Chart.yaml  values.yaml
infra/helm/agentic-nids/templates/: classifier-deployment.yaml  influxdb-statefulset.yaml
infra/helm/observability/: Chart.yaml  values.yaml
infra/helm/observability/templates/: namespace.yaml  nids-dashboards-configmap.yaml
infra/k8s/: classifier-deployment.yaml  clickhouse-statefulset.yaml  kustomization.yaml  namespace.yaml  nats-deployment.yaml  nids-collector-deployment.yaml  orchestrator-cronjob.yaml  promtail-daemonset.yaml  search-deployment.yaml
infra/k8s/vault/: vault-agent-injector.yaml  vault-init-job.yaml  vault-server.yaml
infra/microk8s/: README.md  start_deploy.sh
infra/microk8s/honeypot/: README.md  attacker-deployment.yaml  calico-registry.yaml  grafana-deployment.yaml  loki-deployment.yaml  sonatype-nexus.yaml  victim1-deployment.yaml  victim2-deployment.yaml  victim3-deployment.yaml
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
proto/: classifier.proto
services/: Makefile
services/agent/: Dockerfile  Makefile  README.md  collector.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  schema.sql
services/agent/collections/nids-collector/: bruno.json  readiness.bru  startup.bru  state-flows.bru  state.bru
services/agent/config/: config.yaml
services/agent/scripts/: nids_client.py
services/agent/tests/: test_collector.py
services/classifier/: Cargo.toml  Dockerfile  build.rs  docker-compose.yml  schema.sql
services/classifier/cmd/: main.go
services/classifier/internal/model/: onnx.go
services/classifier/internal/server/: server.go
services/classifier/src/: main.rs
services/orchestrator/: Dockerfile  go.sum
services/orchestrator/cmd/: augment.go  augment_test.go  main.go
services/orchestrator/internal/ch/: client.go
services/orchestrator/internal/grpcclient/: client.go  client_test.go  e2e_test.go
services/orchestrator/internal/state/: state.go
services/proto/: classifier.proto
services/search/: Cargo.toml  Dockerfile
services/search/src/: backend.rs  clickhouse.rs  consul.rs  main.rs  milvus.rs  pool.rs  query.rs
src/: flow.cpp  flow_agent.cpp.bak  main  main.c  main.cpp
