[project]
name = "agent"
version = "0.1.0"
description = "Agentic Network Intrusion Detection System - ML/AI Agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Agentic NIDS Team"}
]
license = {text = "MIT"}

dependencies = [
    # A2A Protocol
    "a2a-sdk>=1.0.0",

    # ONNX Runtime for ML inference
    "onnxruntime>=1.19.0",

    # Core ML/Data libraries
    "numpy>=1.24.0",
    "pandas>=2.0.0",

    # Async and networking
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",

    # Packet capture and processing
    "scapy>=2.5.0",

    # Configuration and validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Full ML stack for training models
ml = [
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
]

# Explainable AI
xai = [
    "shap>=0.44.0",
    "lime>=0.2.0",
]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# All optional dependencies
all = [
    "agent[ml,xai,dev]",
]

[project.scripts]
classifier-agent = "classifier_agent_a2a:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
