[project]
name = "agentic-nids-framework"
version = "0.1.0"
description = "Agentic Network Intrusion Detection System - ML/AI Agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Agentic NIDS Team"}
]
license = {text = "MIT"}

dependencies = [
    # Core ML/Data libraries
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    # Packet capture and processing - CORE for data collection
    "scapy>=2.5.0",
    "nfstream>=6.5.0",
    # System utilities
    "psutil>=5.9.0",
    # Configuration and validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    # CLI
    "typer>=0.9.0",
]

[project.optional-dependencies]
# Full ML stack for training models (comment out - only needed for classifier agent)
# ml = [
#     "scikit-learn>=1.3.0",
#     "xgboost>=2.0.0",
#     "lightgbm>=4.0.0",
# ]

# Explainable AI (comment out - only needed for explanation agent)
# xai = [
#     "shap>=0.44.0",
#     "lime>=0.2.0",
# ]

# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

# All optional dependencies
# all = [
#     "agentic-nids-framework[dev]",
# ]

[project.scripts]
# Main data collector agent using NFStream library (recommended)
nfstream-collector = "nfstream_collector_agent:cli"

# Legacy nDPI collector (uses manual packet processing with scapy)
# ndpi-collector = "ndpi_collector_agent:main"

# Classifier agent (commented out for now - focus on data collection first)
# classifier-agent = "classifier_agent_a2a:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
