[project]
name = "nids-collector"
version = "0.1.0"
description = "NFStream → NATS collector for network flow data"
requires-python = ">=3.12"
authors = [
    {name = "Giorgio Zoppi", email = "giorgio.zoppi@gmail.com"}
]
license = {text = "MIT"}

dependencies = [
    "nfstream>=6.5.0",
    "nats-py>=2.6.0",
    "msgpack>=1.0.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
nids-collector = "collector:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
