[package]
name    = "nids-search"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nids-search"
path = "src/main.rs"

[dependencies]
# HTTP server
axum       = { version = "0.7", features = ["json"] }
tokio      = { version = "1",   features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (one pool per worker)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Lock-free config snapshot (Consul watch → ArcSwap)
arc-swap = "1"

# CLI / config
clap = { version = "4", features = ["derive", "env"] }

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

anyhow = "1"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
